--- a/pom.xml
+++ b/pom.xml
@@ -14,45 +14,6 @@
 		<osjdk.version>3.2.1</osjdk.version>
 	</properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>com.google.protobuf</groupId>
-			<artifactId>protobuf-bom</artifactId>
-			<version>3.23.0</version>
-			<type>pom</type>
-			<scope>import</scope>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.2</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<version>4.3.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>31.1-android</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava-testlib</artifactId>
-			<version>31.1-android</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.google.truth</groupId>
-			<artifactId>truth</artifactId>
-			<version>1.1.2</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-
 	<build>
 		<finalName>java_main</finalName>
 		<plugins>
@@ -81,7 +42,7 @@
 						<phase>package</phase>
 						<configuration>
 							<tasks>
-								<copy todir="/Users/jizhiqian">
+								<copy todir="${env.todir}">
 									<fileset dir="${project.build.directory}">
 										<include name="java_main.jar" />
 									</fileset>
